...
        backgroundColor = .clear
        
        addSubview(rotationContainerView)
        
        addSubview(addButton)
        addSubview(addLabel)
        addButton.accessibilityIdentifier = "newEntryButton"

        NSLayoutConstraint.activate([
            rotationContainerView.centerXAnchor.constraint(equalTo: centerXAnchor),
            rotationContainerView.topAnchor.constraint(equalTo: topAnchor),
            rotationContainerView.widthAnchor.constraint(equalTo: widthAnchor, multiplier: 0.93),
            rotationContainerView.heightAnchor.constraint(equalTo: rotationContainerView.widthAnchor),
...
