...
//        navigationController.setNavigationBarHidden(true, animated: false)
//    }
//
//    private func showEmotionScreen() async {
//        let recordBuilder = RecordBuilder()
//        
//        if let emotionName = ProcessInfo.processInfo.environment["UI_TEST_EMOTION_NAME"] {
//            if let emotion = mapStringToEmotion(emotionName) {
//                recordBuilder.setEmotion(emotion)
//            }
//        }
//        
//        let viewController = EmotionViewController(recordBuilder: recordBuilder)
...
